<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:gravity="center_vertical"
	        android:orientation="horizontal">

	        <Button
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:text="@string/debug_refresh"
	            android:onClick="refresh" />
	        
	        <Button
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:text="@string/debug_clear"
	            android:onClick="clear" />
	        
	        <Button
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="2.0"
	            android:layout_marginLeft="20dip"
	            android:text="@string/debug_kill"
	            android:onClick="killClient" />

	    </LinearLayout>

	    <TextView
	        android:id="@+id/managerLogHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/debug_manager_header"
        	android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:layout_marginBottom="3dip"
	        android:layout_marginLeft="3dip"
	        android:layout_marginRight="3dip"
	        android:layout_marginTop="15dip" >
	    </TextView>
	    <TextView
	        android:id="@+id/managerLog"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="3dip"
	        android:layout_marginLeft="3dip"
	        android:layout_marginRight="3dip"
	        android:layout_marginTop="15dip" >
	    </TextView>
	    <TextView
	        android:id="@+id/clientLogHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/debug_client_header"
        	android:textAppearance="?android:attr/textAppearanceMedium" 
	        android:layout_marginBottom="3dip"
	        android:layout_marginLeft="3dip"
	        android:layout_marginRight="3dip"
	        android:layout_marginTop="15dip" >
	    </TextView>
	    <TextView
	        android:id="@+id/clientLog"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="3dip"
	        android:layout_marginLeft="3dip"
	        android:layout_marginRight="3dip"
	        android:layout_marginTop="15dip" >
	    </TextView>
	    
	</LinearLayout>
</ScrollView>


