<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
    	android:layout_gravity="center_horizontal"
        android:text="@string/status_noproject"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
    	android:layout_gravity="center_horizontal"
        android:text="@string/status_noproject_long"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:orientation="horizontal" >
        
		<TextView
	        android:layout_width="70dip"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:text="@string/status_noproject_email"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
		
        <EditText
            android:id="@+id/emailIn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:layout_marginRight="20dip"
            android:ems="10"
            android:inputType="textEmailAddress" >
            <requestFocus />
        </EditText>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="horizontal" >
        
		<TextView
	        android:layout_width="70dip"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="10dip"
	        android:text="@string/status_noproject_pwd"
	        android:textAppearance="?android:attr/textAppearanceSmall" />
		
        <EditText
            android:id="@+id/pwdIn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:layout_marginRight="20dip"
            android:ems="10"
            android:inputType="textPassword" >
            <requestFocus />
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/loginConfirmButton"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dip"
        android:onClick="loginButtonClicked"
        android:text="@string/status_noproject_button" />

</LinearLayout>
